Solucion dificultad local storage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <br><label id="valCamisas">costo de camisas</label>
         <br><input id="costoCamisas" type="number"  placeholder="Ingrese costo de las camisas" required><br>
-        <br><button id="boton1" type="button" onclick="calcular();">Calcular</button><br><br>
+        <button id="boton1" type="button" onclick="calcular(),AlmacenarLocalStorage();">Calcular</button><br><br>
         <br><label>Total a pagar:</label>
         <br><input id="salida" type="number" placeholder="su resultado es">
 
